resolve target support hack

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "lint-fix": "eslint . --fix --cache",
     "lint": "eslint . --cache",
     "postpublish": "yarn workspaces run cleanup-release",
-    "publish": "yarn run build-clean && yarn run build && yarn workspaces run prepare-release && npm publish --workspaces",
+    "publish": "yarn run build-clean && yarn run build && yarn workspaces run prepare-release && npm publish --workspace @shoppymn/metro-resolver",
+    "release": "npm publish --workspace @shoppymn/metro-resolver",
     "start": "node packages/metro/src/cli",
     "test": "yarn run typecheck && yarn run lint && yarn run build && yarn run jest",
     "test-coverage": "yarn run build && yarn run jest --coverage -i && node scripts/mapCoverage.js",
